tests/models/enum/named/i8/pass/gt.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(gt = 2)]
        value: i8
    },
}
fn main() {}
